Add maven profiles for different java versions